test/link/linkerscript-noexist.out
error: Failed to open included linker script "linkerscript-noexist.inc": No such file or directory
    at linkerscript-noexist.link(1)
Linking failed with 1 error
